src/snapshots/vm__parser__test__parse_binary_operations-27.snap
---
source: src/parser.rs
expression: "binary_operation_expr(\"a = b\".into())"
---
Err(
    Error(
        Stack {
            base: Alt(
                [
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                "&&",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                "||",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                "==",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                "!=",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                "<=",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Tag(
                                ">=",
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '<',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '>',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '+',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '-',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '/',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '*',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '%',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '&',
                            ),
                        ),
                    },
                    Base {
                        location: LocatedSpan {
                            offset: 2,
                            line: 1,
                            fragment: "= b",
                            extra: (),
                        },
                        kind: Expected(
                            Char(
                                '|',
                            ),
                        ),
                    },
                ],
            ),
            contexts: [
                (
                    LocatedSpan {
                        offset: 1,
                        line: 1,
                        fragment: " = b",
                        extra: (),
                    },
                    Context(
                        "Binary operator",
                    ),
                ),
            ],
        },
    ),
)
