src/snapshots/vm__parser__test__parse_booleans-2.snap
---
source: src/parser.rs
expression: "boolean(r#\"false\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 5,
            line: 1,
            fragment: "",
            extra: (),
        },
        Boolean(
            false,
        ),
    ),
)
