src/snapshots/vm__parser__test__parse_booleans.snap
---
source: src/parser.rs
expression: "boolean(r#\"true\"#.into())"
---
Ok(
    (
        LocatedSpan {
            offset: 4,
            line: 1,
            fragment: "",
            extra: (),
        },
        Boolean(
            true,
        ),
    ),
)
