src/snapshots/vm__parser__test__parse_controlflow-3.snap
---
source: src/parser.rs
expression: "controlflow_statement(\"break;\".into())"
---
Ok(
    (
        LocatedSpan {
            offset: 6,
            line: 1,
            fragment: "",
            extra: (),
        },
        Ast {
            node: Break {
                label: None,
            },
            span: LocatedSpan {
                offset: 0,
                line: 1,
                fragment: "break",
                extra: (),
            },
        },
    ),
)
